--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,6 @@ deploy:
   on:
     branch: master
 
-  access_key_id: aws access key
-  secret_access_key: secret key
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: "$AWS_SECRET_KEY"
